external-crates/move/crates/move-compiler/tests/move_check/warning_suppression/deny_all.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E09002]: unused variable
  ┌─ tests/move_check/warning_suppression/deny_all.move:4:13
  │
2 │ #[deny(all)]
  │        --- the lint level is defined here
3 │ module 0x42::m {
4 │     fun foo(a: u64) {
  │             ^ Unused parameter 'a'. Consider removing or prefixing with an underscore: '_a'

error[E09002]: unused variable
  ┌─ tests/move_check/warning_suppression/deny_all.move:5:13
  │
2 │ #[deny(all)]
  │        --- the lint level is defined here
  ·
5 │         let x;
  │             ^ Unused local variable 'x'. Consider removing or prefixing with an underscore: '_x'
